Bug 460012. When recreating frames for a generated content node, reframe the nearest non-generated-content ancestor. r+sr=bzbarsky